<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_announcement"
            android:icon="@drawable/announcement"
            android:title="@string/announcement"/>

        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/bookmark"
            android:title="@string/bookmark"/>

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar"
            android:title="@string/calendar"/>

        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/social"
            android:title="@string/social"/>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings"
            android:title="@string/setting"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share"/>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>