<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
<<<<<<< HEAD
        android:id="@+id/nav_none"
        android:title=""
        android:visible="false"/>
    <item
=======
>>>>>>> renzo
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_map"
        android:title="@string/map"/>
    <item
<<<<<<< HEAD
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
=======
        android:id="@+id/nav_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/add_circle"
        android:iconTint="#4CAF50"
        android:title="Add" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_heart"
        android:title="@string/favorites"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
>>>>>>> renzo
        android:title="@string/profile"/>
</menu> 